<resources>
    <string name="defaultWebTitle">主页</string>
    <string name="app_name">Browser</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="url">输入URL</string>
    <string name="search">搜索</string>
    <string name="search_hint">搜索或输入网址</string>
    <string name="search_label">label</string>
    <string name="settings">设置</string>
    <string name="number">1</string>
    <string name="clear">清空历史记录</string>

    <string name="title_bar_loading">loading</string>
    <string name="setting">设置</string>
    <string name="download">下载</string>
    <string name="defaultBrowser">设置默认浏览器</string>
    <string name="close">CLOSE</string>
    <string name="untitled">无标题</string>
    <string name="back">返回</string>
    <string name="confirm">确认</string>
    <string name="delete">删除</string>
    <string name="modify">修改</string>
    <string name="addToMain">添加至主页</string>
    <string name="one">1</string>
    <string name="edit">编辑书签</string>
    <string name="noImage">智能无图</string>
    <string name="mark">书签历史</string>
    <string name="night">夜间模式</string>
    <string name="noTrack">无痕</string>
    <string name="refresh">刷新</string>
    <string name="http">http://</string>
    <string name="https">https://</string>
    <string name="com">.com</string>
    <string name="cn">.cn</string>
    <string name="noData">没有数据</string>
</resources>
