<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="?android:attr/colorBackground"
    android:padding="12dp"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/fav_del"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_weight="1"
        android:text="@string/delete"
        android:textColor="@color/textColor"
        tools:paddingBottom="8dp"
        tools:paddingLeft="8dp"
        tools:paddingRight="8dp"
        tools:paddingTop="8dp" />

    <TextView
        android:id="@+id/fav_mod"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_weight="1"
        android:text="@string/modify"
        android:textColor="@color/textColor"
        tools:paddingBottom="8dp"
        tools:paddingLeft="8dp"
        tools:paddingRight="8dp"
        tools:paddingTop="8dp" />

    <TextView
        android:id="@+id/fav_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_weight="1"
        android:text="@string/addToMain"
        android:textColor="@color/textColor"
        tools:paddingBottom="8dp"
        tools:paddingLeft="8dp"
        tools:paddingRight="8dp"
        tools:paddingTop="8dp" />
</LinearLayout>