<?xml version="1.0" encoding="utf-8"?>
<layout >
    <data>
        <variable
            name="handlers"
            type="cf.vozhuo.app.broswser.search_history.SearchActivity" />
    </data>
    <android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.constraint.ConstraintLayout
            android:id="@+id/main_search"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:background="@drawable/border"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <cf.vozhuo.app.broswser.search_history.EditText_Clear
                android:id="@+id/searchView"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="5dp"
                android:background="@null"
                android:drawablePadding="8dp"
                android:gravity="start|center_vertical"
                android:hint="@string/search_hint"
                android:imeOptions="actionSearch"
                android:selectAllOnFocus="true"
                android:singleLine="true"
                android:textCursorDrawable="@null"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/btn_search_check"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/btn_search_check"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:background="@null"
                android:gravity="center"
                android:onClick="@{handlers::onClick}"
                android:text="@string/search"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/searchView"
                app:layout_constraintTop_toTopOf="parent" />
        </android.support.constraint.ConstraintLayout>

        <android.support.constraint.ConstraintLayout
            android:id="@+id/search_history"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@+id/main_search"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:id="@+id/clear_history"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:text="@string/clear"
                android:onClick="@{handlers::onClick}"
                app:layout_constraintBottom_toTopOf="@+id/showSearchList"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="1.0" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/showSearchList"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/clear_history"
                app:stackFromEnd="true"
                tools:listitem="@layout/item_search_history" />

        </android.support.constraint.ConstraintLayout>

    </android.support.constraint.ConstraintLayout>
</layout>